crates/dobby-sys/src/ffi.rs

#![allow(non_snake_case, non_camel_case_types, non_upper_case_globals)]
/* automatically generated by rust-bindgen 0.59.2 */

extern "C" {
    pub fn DobbyBuildVersion() -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn DobbyHook(
        address: *mut ::std::os::raw::c_void,
        replace_call: *mut ::std::os::raw::c_void,
        origin_call: *mut *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn DobbyDestroy(address: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn DobbySymbolResolver(
        image_name: *const ::std::os::raw::c_char,
        symbol_name: *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn DobbyGlobalOffsetTableReplace(
        image_name: *mut ::std::os::raw::c_char,
        symbol_name: *mut ::std::os::raw::c_char,
        fake_func: *mut ::std::os::raw::c_void,
        orig_func: *mut *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
pub const MemoryOperationError_kMemoryOperationSuccess: MemoryOperationError = 0;
pub const MemoryOperationError_kMemoryOperationError: MemoryOperationError = 1;
pub const MemoryOperationError_kNotSupportAllocateExecutableMemory: MemoryOperationError = 2;
pub const MemoryOperationError_kNotEnough: MemoryOperationError = 3;
pub const MemoryOperationError_kNone: MemoryOperationError = 4;
pub type MemoryOperationError = ::std::os::raw::c_uint;
extern "C" {
    pub fn CodePatch(
        address: *mut ::std::os::raw::c_void,
        buffer: *mut ::std::os::raw::c_uchar,
        buffer_size: ::std::os::raw::c_uint,
    ) -> MemoryOperationError;
}
extern "C" {
    pub fn log_set_level(level: ::std::os::raw::c_int);
}
extern "C" {
    pub fn log_switch_to_syslog();
}
extern "C" {
    pub fn log_switch_to_file(path: *const ::std::os::raw::c_char);
}
